k8s/ing-hello.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  labels:
    app: hello
  name: hello
spec:
  rules:
  - host: hello.app.zyl.io
    http:
      paths:
      - backend:
          serviceName: hello
          servicePort: 9080
